--- a/NTK/Literature Review/Literature Review.tex
+++ b/NTK/Literature Review/Literature Review.tex
@@ -19,15 +19,15 @@
 \pagestyle{plain}
 
 %%%% Load Format %%%%
-\input{../Formats/format.tex}
-\input{../Formats/Macro.tex}
+\input{../../Formats/format.tex}
+\input{../../Formats/Macro.tex}
 % \allowpagebreaks
 %%%% Document Information %%%%
 \title{Literature Review}
 \author{Kailong Wang}
 \date{}
 
-\addbibresource{../../Markdown/Paper/My Library.bib}
+\addbibresource{../../../Markdown/Paper/My Library.bib}
 
 %%%% Start Document %%%%
 \begin{document}
