--- a/NTK/First Implementation/main.ipynb
+++ b/NTK/First Implementation/main.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "- Study the Neural Tangent Library by Google\n",
     "- Reproduce several works published in 2019 focusing on the basic property of NTK and being familiar with the code\n",
-    "- TBC"
+    "- TBD"
    ]
   },
   {
@@ -30,6 +30,7 @@
    "metadata": {},
    "source": [
     "The following paper contains the development of the [neural-tangents](https://github.com/google/neural-tangents) library\n",
+    "\n",
     "- [Neural Tangents: Fast and Easy Infinite Neural Networks in Python](https://arxiv.org/abs/1912.02803)\n",
     "- [Fast Finite Width Neural Tangent Kernel](https://arxiv.org/abs/2206.08720)\n",
     "- [Infinite attention: NNGP and NTK for deep attention networks](https://arxiv.org/abs/2006.10540)\n",
@@ -48,7 +49,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following paper contains the basic property of NTK, which are used to be familiar with the [neural-tangents](https://github.com/google/neural-tangents) library.\n",
+    "The following paper contains the basic property of NTK in the early years, which will be used to be familiar with the [neural-tangents](https://github.com/google/neural-tangents) library.\n",
+    "\n",
     "- NIPS 2019\n",
     "  - [Wide Neural Networks of Any Depth Evolve as Linear Models Under Gradient Descent](https://arxiv.org/pdf/1902.06720.pdf)\n",
     "  - [On Lazy Training in Differentiable Programming](https://arxiv.org/pdf/1812.07956.pdf)\n",
