--- a/NTK/First Implementation/main.ipynb
+++ b/NTK/First Implementation/main.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is the record of my study progress on NTK. The plan is as follows.\n",
+    "The plan of studying Neural Tangent Kernel (NTK).\n",
     "\n",
     "- Study the Neural Tangent Library by Google\n",
     "- Reproduce several works published in 2019 focusing on the basic property of NTK and being familiar with the code\n",
@@ -42,25 +42,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# First Results"
+    "# Prerequisites"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following paper contains the basic property of NTK in the early years, which will be used to be familiar with the [neural-tangents](https://github.com/google/neural-tangents) library.\n",
+    "Some basic knowledge of Deep Neural Network(DNN) needed in understanding NTK\n",
     "\n",
-    "- NIPS 2019\n",
-    "  - [Wide Neural Networks of Any Depth Evolve as Linear Models Under Gradient Descent](https://arxiv.org/pdf/1902.06720.pdf)\n",
-    "  - [On Lazy Training in Differentiable Programming](https://arxiv.org/pdf/1812.07956.pdf)\n",
-    "  - [The Convergence Rate of Neural Networks for Learned Functions of Different Frequencies](https://arxiv.org/pdf/1906.00425.pdf)\n",
-    "  - [Limitations of Lazy Training of Two-layers Neural Networks](https://arxiv.org/pdf/1906.08899.pdf)\n",
-    "  - [On the Inductive Bias of Neural Tangent Kernels](https://arxiv.org/pdf/1905.12173.pdf)\n",
-    "- ICML 2020\n",
-    "  - [Neural Kernels Without Tangents](https://arxiv.org/pdf/2003.02237.pdf)\n",
-    "- arXiv\n",
-    "  - [A Fine-Grained Spectral Perspective on Neural Networks](https://arxiv.org/pdf/1907.10599.pdf)"
+    "- Neural Networks are build using principle of neuronal organization discovered by connection in the biological neural networks constituting animal brains. It is loosely modeled by stacking layers of neurons. Such architecture is also called Multi-Layer Perceptron (MLP).\n",
+    "- [Universal Approximation Theorem](https://en.wikipedia.org/wiki/Universal_approximation_theorem) states that `1-layer` MLP has capability in modeling any function with the following condition:\n",
+    "  - The input dimension is smaller than the number of neurons. Actually, it needs to be far less.\n",
+    "  - The continuous function is in Euclidean Space\n",
+    "- In practice, the width (number of neurons in a single layer) cannot go to infinity. To overcome this limitation, `n-layers` MLP (a.k.a. DNN) was invented with the following setup:\n",
+    "  - Activation function between layers. Without activation function, `n-layers` MLP will be mathematically equivalent to `1-layer` MLP due to linearity. That says activation involves non-linearity for DNN.\n",
+    "  - A typical DNN will have at least `2-layers` so that there will be a place for activation function in between layers. **That's why so many theories focusing on analyzing `2-layers` MLP architecture**.\n",
+    "- Empirically, the DNN is more powerful than it sounds to be (i.e. beyond the Universal Approximation Theorem) as follows:\n",
+    "  - DNN not only shows superior performance in approximation but also in prediction (generalization, beyond human accuracy).\n",
+    "  - DNN is not limited to Euclidean Space\n",
+    "- Some architectures are designed to further improve the performance of the DNN, empirically, with loosely theoretically analysis:\n",
+    "  - Batch Normalization (faster convergence)\n",
+    "  - Dropout (non-linearity for generalization)\n",
+    "  - Initialization (Better overall performance)\n",
+    "  - ReLU (Overcome Gradient Explosion)\n",
+    "  - ResNet (Overcome Gradient Vanish)\n",
+    "  - CNN (Computer Vision)\n",
+    "  - Transformer (Human knowledge Prior)\n",
+    "  - Diffusion (Mimic Optimal Transportation)\n",
+    "  - RNN, Knowledge Distillation, etc.\n",
+    "- Some Theory Framework (Trick?)\n",
+    "  - Neural Ordinary Differential Equation and Neural Partial Differential Equation. Traditional deep neural networks can be thought of as discretized transformations of data across layers. Neural Differential Equations replace these discrete transformations with a continuous transformation.\n",
+    "  - Mean Field Theory to analyze the Optimization Dynamic at Initialization.\n",
+    "  - **`Neural Tangent Kernel to analyze the infinity width DNN`**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Neural Tangent Kernel"
    ]
   },
   {
